tests/paczka1/small_fuzzy/51512485.err
Error in line 4: XyopD A368 11,0
Error in line 9: XyopD A412 40,3
